--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="screen.css">
 
     <meta name="description" content="Receive periodic affirmation from the one website that will never judge you.">
-    <meta property="og:title" content="Wii Sports Affirmation">
+    <meta property="og:title" content="Wii Sports Affirmations">
     <meta property="og:description" content="Receive periodic affirmation from the one website that will never judge you.">
     <!-- <meta property="og:image" content="https://www.mywebsite.com/image.jpg">
     <meta property="og:image:alt" content="Image description"> -->
@@ -31,7 +31,7 @@
         <hr>
 
         <main>
-            <h2>Another day, another slay</h2>
+            <h2>You deserve a trophy!</h2>
             <div class="intro">
                 <div class="intro-text">
                     <p>
@@ -51,7 +51,7 @@
                 <button class="wii-button" id="on-off">Start</button>
                 <div class="bar-wrapper">
                     <h5>Countdown to Affirmation</h5>
-                    <progress id="progress" max="10" value="0"></progress>
+                    <progress id="progress" max="10" value="0">None</progress>
                 </div>
             </div>
         </main>
