--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <hr>
 
         <main>
-            <h2>You deserve a trophy!</h2>
+            <h2>ADHD is chronic, but <em>you</em> are iconic!</h2>
             <div class="intro">
                 <div class="intro-text">
                     <p>
-                        Power through your homework! Fueled by the inspiring sounds of Wii Sports,
+                        Power through your homework! Fueled by the inspiring sounds of <em>Wii Sports</em>,
                         you will be unstoppable!
                     </p>
                     <p>
