--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta name="description" content="Receive periodic affirmation from the one website that will never judge you.">
     <meta property="og:title" content="Wii Sports Affirmations">
     <meta property="og:description" content="Receive periodic affirmation from the one website that will never judge you.">
-    <!-- <meta property="og:image" content="https://www.mywebsite.com/image.jpg">
-    <meta property="og:image:alt" content="Image description"> -->
+    <meta property="og:description" content="Receive periodic affirmation from the one website that will never judge you.">
+    <meta property="og:image" content="https://www.wii-sports-affirmations.net/img/you-win.jpg">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
 </head>
