--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
                 </div>
             </div>
         </main>
-
-        
     </div>
+    <footer>
+        Made in 2023 by <a rel="me" href="https://twitch.tv/lukevaxhacker">@LukeVaxhacker</a>
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
