--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wii Sports Affirmation</title>
+    <title>Wii Sports Affirmations</title>
 
     <script type="module">
         document.documentElement.classList.remove('no-js');
@@ -15,7 +15,6 @@
 
     <meta name="description" content="Receive periodic affirmation from the one website that will never judge you.">
     <meta property="og:title" content="Wii Sports Affirmations">
-    <meta property="og:description" content="Receive periodic affirmation from the one website that will never judge you.">
     <meta property="og:description" content="Receive periodic affirmation from the one website that will never judge you.">
     <meta property="og:image" content="https://www.wii-sports-affirmations.net/img/you-win.jpg">
     <meta property="og:locale" content="en_US">
